--- a/.travis.bintray.json.in
+++ b/.travis.bintray.json.in
@@ -9,7 +9,7 @@
         "vcs_url": "https://github.com/yadickson/__NAME__-debs.git",
         "github_use_tag_release_notes": true,
         "github_release_notes_file": "RELEASE.txt",
-        "licenses": ["__LICENSE__", "GPL-3.0"],
+        "licenses": ["__LICENSE__", "MIT", "GPL-3.0"],
         "labels": ["__NAME__", "__REPO_NAME__"],
         "public_download_numbers": true,
         "public_stats": false
