--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - BINTRAY_USER=yadickson
   - GITHUB_NAME=yadickson
   - GITHUB_EMAIL=yadickson@gmail.com
-  - PACKAGE_LICENSE=Apache-2.0\", \"MIT
+  - PACKAGE_LICENSE=Apache-2.0
   - PACKAGE_NAME=$(dpkg-parsechangelog | awk '/^Source:/ { print $2 }')
   - PACKAGE_VERSION=$(dpkg-parsechangelog | awk '/^Version:/ { print $2 }' | sed 's/-.*//')
   - PACKAGE_DISTRIBUTION=$(dpkg-parsechangelog | awk '/^Distribution:/ { print $2 }')
